@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-06-13T12:36:50Z",
-  "count_outdated" : 7824,
-  "uniques_outdated" : 3438,
-  "count" : 8020,
-  "uniques" : 3529,
+  "timestamp" : "2024-06-15T01:23:18Z",
+  "count_outdated" : 7827,
+  "uniques_outdated" : 3440,
+  "count" : 8021,
+  "uniques" : 3530,
   "clones" : [
     {
-      "timestamp": "2024-05-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2024-06-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2024-06-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
