@@ -1,16 +1,11 @@
 {
-  "count": 196,
-  "uniques": 68,
+  "count": 193,
+  "uniques": 69,
   "clones": [
     {
-      "timestamp": "2024-05-31T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-06-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2024-06-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
